2.0.0. Release
This marks a major release with improvements across the board and extended support for different Java versions and servers